--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ html
           | Sign in to Flipper
       div.mt-8(class='sm:mx-auto sm:w-full sm:max-w-md')
         .bg-white.py-8.px-4.shadow(class='sm:rounded-lg sm:px-10')
-          form(action='' method='POST')
+          form(action='/' method='POST')
             div
               label.block.text-sm.font-medium.leading-5.text-gray-700(for='username')
                 | Username
